# Autonomous-Door-Opening-Project

./: README.txt
Matlab Code/: Calibration.m  Door_Open.m  Elevator_Button_Press.m
ROS Integrated Files/jaco-ros-master/jaco_control/: CMakeLists.txt  CMakeLists.txt~
ROS Integrated Files/jaco-ros-master/jaco_control/src/: publisher.cpp
ROS Integrated Files/jaco-ros-master/jaco_driver/: CMakeLists.txt
ROS Integrated Files/jaco-ros-master/jaco_driver-build/: CMakeCache.txt
ROS Integrated Files/jaco-ros-master/jaco_driver/include/jaco_driver/: jaco_api.h  jaco_api.h~  jaco_arm.h  jaco_arm.h~  jaco_comm.h  jaco_comm.h~  mico_manipulation.h  mico_manipulation.h~
ROS Integrated Files/jaco-ros-master/jaco_driver/include/kinova/: KinovaTypes.h~
ROS Integrated Files/jaco-ros-master/jaco_driver/launch/: mico_arm.launch
ROS Integrated Files/jaco-ros-master/jaco_driver/src/: jaco_api.cpp  jaco_arm.cpp  jaco_arm.cpp~  mico_manipulation.cpp
ROS Integrated Files/jaco-ros-master/jaco_driver/src/nodes/: jaco_arm_driver.cpp
ROS Integrated Files/jaco-ros-master/jaco_msgs/: CMakeLists.txt~
ROS Integrated Files/jaco-ros-master/jaco_msgs/msg/: DoorOpen.msg  DoorOpen.msg~
Simulation Files/Project/jaco_gazebo/launch/: jaco_gazebo_control.launch~
